public interface Arma {
	public String getTipo();
	public int getDannoArea();
	public int getDannoMirato();
}

