public interface Munizioni {
	public int getMoltiplicatoreDanno();
}