public class MunizioniLeggere implements Munizioni {
	
	@Override
	public int getMoltiplicatoreDanno() {
		return 2;
	}
	
}
