public class MunizioniPesanti implements Munizioni {
	
	@Override
	public int getMoltiplicatoreDanno() {
		return 5;
	}
	
}
